--- a/tests/sdk/transmission/session/BUILD.gn
+++ b/tests/sdk/transmission/session/BUILD.gn
@@ -227,6 +227,31 @@ ohos_unittest("TransClientSocketServiceTest") {
   }
 }
 
+ohos_unittest("TransClientSocketTest") {
+  module_out_path = module_output_path
+  sources = [ "client_trans_inner_socket_test.cpp" ]
+
+  deps = [
+    "$dsoftbus_root_path/sdk:softbus_client",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (is_standard_system) {
+    external_deps = [
+      "access_token:libaccesstoken_sdk",
+      "access_token:libnativetoken",
+      "access_token:libtoken_setproc",
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  }
+}
+
 group("unittest") {
   testonly = true
   deps = [
@@ -236,5 +261,6 @@ group("unittest") {
     ":TransClientSessionServiceTest",
     ":TransClientSessionTest",
     ":TransClientSocketServiceTest",
+    ":TransClientSocketTest",
   ]
 }
